# captcha_oxide

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  🐞-bug-report.md  🛠-feature-request.md
captcha_oxide_derive/: Cargo.toml
captcha_oxide_derive/src/: lib.rs
captcha_oxide_derive/src/expansion/: captcha_solution.rs  mod.rs  proxy_task.rs
captcha_oxide_derive/src/expansion/derive_captcha_task/: builder.rs  field_parser.rs  mod.rs  type_state.rs
captcha_oxide_derive/src/util/: classify_fields.rs  extract_named_fields.rs  extract_struct_data.rs  mod.rs
src/: error.rs  lib.rs  prelude.rs  response.rs  solution.rs  solver.rs  status.rs
src/arguments/: captcha_arguments.rs  captcha_type.rs  character_restrictions.rs  language.rs  mod.rs  proxy.rs
src/arguments/capy_captcha/: builder.rs  capy_version.rs  mod.rs  type_state.rs
src/arguments/geetest/: builder.rs  mod.rs
src/arguments/geetest_v4/: builder.rs  mod.rs
src/arguments/h_captcha/: builder.rs  mod.rs
src/arguments/key_captcha/: builder.rs  mod.rs
src/arguments/normal_captcha/: builder.rs  image_instructions.rs  methods.rs  mod.rs
src/arguments/recaptcha_v2/: builder.rs  cookie.rs  mod.rs
src/arguments/recaptcha_v3/: builder.rs  mod.rs
src/arguments/text_captcha/: builder.rs  mod.rs  type_state.rs
src/arguments/type_state/: mod.rs  page_url.rs  site_key.rs
src/captcha_arguments/: arguments.rs  capy_captcha.rs  character_restrictions.rs  geetest.rs  h_captcha.rs  key_captcha.rs  language.rs  mod.rs  normal_captcha.rs  proxy_type.rs  recaptcha_v2.rs  recaptcha_v3.rs  text_captcha.rs
src/captcha_types/: empty_data.rs  mod.rs
src/captcha_types/amazon_captcha/: builder.rs  mod.rs  solution.rs  task.rs  type_state.rs
src/captcha_types/arkose_labs_captcha/: builder.rs  solution.rs  task.rs
src/captcha_types/audio_captcha/: solution.rs  task.rs
src/captcha_types/bounding_box_captcha/: builder.rs  solution.rs  task.rs
src/captcha_types/capy_captcha/: builder.rs  solution.rs  task.rs
src/captcha_types/coordinates_captcha/: solution.rs  task.rs
src/captcha_types/cut_captcha/: solution.rs  task.rs
src/captcha_types/cyber_siara_captcha/: solution.rs  task.rs
src/captcha_types/data_dome_captcha/: mod.rs  solution.rs  task.rs
src/captcha_types/draw_aroud_captcha/: mod.rs  solution.rs  task.rs
src/captcha_types/draw_around_captcha/: builder.rs  solution.rs  task.rs  type_state.rs
src/captcha_types/friendly_captcha/: mod.rs  solution.rs  task.rs
src/captcha_types/geetest/: mod.rs  type_state.rs
src/captcha_types/grid_captcha/: builder.rs  solution.rs  task.rs
src/captcha_types/h_captcha/: builder.rs  mod.rs  solution.rs  task.rs
src/captcha_types/key_captcha/: builder.rs  mod.rs  solution.rs  task.rs  type_state.rs
src/captcha_types/lemin_captcha/: builder.rs  mod.rs  solution.rs  task.rs  type_state.rs
src/captcha_types/mt_captcha/: mod.rs  solution.rs  task.rs
src/cookie/: mod.rs
src/proxy/: address.rs  mod.rs  proxy_type.rs
src/solution/: mod.rs  solution_enum.rs
src/solver/: builder.rs  create_task.rs  error.rs  get_balance.rs  language_pool.rs  mod.rs  task_request.rs  task_result.rs
src/task/: mod.rs
src/type_state/: mod.rs
(+60 files in other folders)
