[package]
name = "captcha_breaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["multipart"] }
serde = { version = "1.0.162", features = ["std", "derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
