[package]
name = "captcha_oxide"
version = "3.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/escritorio-gustavo/captcha_oxide"
repository = "https://github.com/escritorio-gustavo/captcha_oxide"
authors = ["gustavo-shigueo"]
description = "Library for interacting with the 2Captcha API to solve captcha puzzles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["std", "derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
lazy_static = "1"
catptcha_oxide_derive = { version = "3", path = "captcha_oxide_derive" }
serde_repr = "0.1"

[dev-dependencies]
dotenv = "0.15.0"
