[package]
name = "catptcha_oxide_derive"
license = "MIT OR Apache-2.0"
description = "Derive macro for the Solution trait. May include more macros in the future"
version = "3.0.0"
edition = "2021"

[lib]
proc-macro = true
path = "./src/lib.rs"

[dependencies]
quote = "^1"
syn = { version = "^2", features = ["extra-traits", "full"] }
darling = "0.20"
