[package]
name = "captcha_oxide_derive"
license = "MIT OR Apache-2.0"
description = "Useful proc macros for captcha_oxide"
version = "3.1.2"
edition = "2021"

[lib]
proc-macro = true
path = "./src/lib.rs"

[dependencies]
quote = "^1"
syn = { version = "^2", features = ["extra-traits", "full"] }
darling = "0.20"
