[package]
name = "captcha_oxide_derive"
license = "MIT OR Apache-2.0"
description = "Useful proc macros for captcha_oxide"
version = "4.0.0-rc.1"
edition = "2021"

[lib]
proc-macro = true
path = "./src/lib.rs"

[dependencies]
quote = "^1"
syn = { version = "^2", features = ["extra-traits", "full"] }
darling = "^0.20"
deluxe = "^0.5"
proc-macro2 = "^1"
convert_case = "^0.6"
